force-app/main/default/objects/MessageBoard_Responde__c/MessageBoard_Responde__c.object-meta.xml
<CustomObject>
    <label>留言板回复</label>
    <nameField>
        <displayFormat>MBR-{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>留言板回复</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>