force-app/main/default/objects/MessageBoard_Responde__c/fields/CurrentUserEditPermission__c.field-meta.xml
<CustomField>
    <fullName>CurrentUserEditPermission__c</fullName>
    <formula>$User.Id == CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*当前用户是否为留言板回复创建人</label>
    <type>Checkbox</type>
</CustomField>