force-app/main/default/objects/MessageBoard_Responde__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>已读状态(del)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已读</fullName>
            </value>
            <value>
                <fullName>未读</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>