force-app/main/default/objects/MessageBoard_Responde__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>回复</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>