force-app/main/default/objects/MessageBoard_Responde__c/fields/MessageBoard__c.field-meta.xml
<CustomField>
    <fullName>MessageBoard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联留言</label>
    <referenceTo>Shop_Message_Board__c</referenceTo>
    <relationshipLabel>留言板回复</relationshipLabel>
    <relationshipName>MBR3Bwh</relationshipName>
    <type>Lookup</type>
</CustomField>