force-app/main/default/objects/MessageBoard_Responde__c/validationRules/MessageBoardNotAllowReply.validationRule-meta.xml
<ValidationRule>
    <fullName>MessageBoardNotAllowReply</fullName>
    <active>true</active>
    <description>留言板不可回复</description>
    <errorConditionFormula>TEXT(MessageBoard__r.IsActive__c)  &lt;&gt; &apos;有效&apos;</errorConditionFormula>
    <errorMessage>当前留言板已过期，不可新建或编辑回复。请联系留言板创建人重新激活，或新建留言板。</errorMessage>
</ValidationRule>